--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     name="description"
     content="Web site created using create-react-app"
     />
-    <title>StillBirth Prediction</title>
+    <title>RealTime Climate Analysis</title>
     <link rel=icon href="../src/logo.png" />
   </head>
   <body>
